# clt-dataset

./: .gitignore  README.md  pyproject.toml
dataset/: analyse_prompts.py  augment_llm.py  augmentor.py  auth.py  collect_task_types.py  construct_dataset.py  dataset_construction.md  embeddings.py  extractor.py  few_shot_examples.json  fix_slots.py  generator.py  local_llm.py  option_taxonomy.py  pipeline.py  schema.py  segmenter.py  store.py  token_counter.py  validator.py
dataset/few_shot_annotation/: annotate_few_shot.py  annotation_app.py
dataset/output/: constructed_prompts.coverage.json  few_shot_examples.json
dataset/output/taxonomy/: ARC_analysis.json  Boolq_analysis.json  DROP_analysis.json  DollyV2_analysis.json  FLAN_analysis.json  FollowBench_analysis.json  GSM8K_analysis.json  SciQ_analysis.json  TriviaQA_analysis.json  WizardLM_(Evol-Instruct)_analysis.json  explanation.md  taxonomy.json  taxonomy_summary.txt  unified_taxonomy.csv
dataset/taxonomy/: collect_task_types.py
