[project]
name = "clt"
version = "0.1.0"
description = ""
authors = [
    {name = "eliroc98",email = "elisabetta.rocchetti0@gmail.com"}
]
requires-python = ">=3.11,<3.13"

dependencies = [
    "datasets (>=4.6.0,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "tiktoken (>=0.7.0,<1.0.0)",
    "huggingface-hub (>=0.28.0,<1.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "torch (>=2.4.0,<3.0.0)",
    "transformers (>=4.48.0,<6.0.0)",
    "vllm (>=0.6.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "spacy (>=3.7.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false